# chip8-emulator

./: .gitignore  CMakeLists.txt  Chip8.cc  Chip8.h  Platform.cc  Platform.h  README.md  chip8.cc  chip8.h  main.cc
